fixed skills section on mobile 3

--- a/p5/style.css
+++ b/p5/style.css
@@ -721,21 +721,7 @@ img.contact:hover {
   }
 }
 
-@media screen and (max-width: 560px) {
-  .projectsA {
-    grid-template-columns: repeat(2, 1fr);
 
-  }
-
-  .row {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  img.slide, img.slide-dark {
-    height: 200px;
-    width: 400px;
-  }
-}
 
 @media screen and (max-width: 768px) { 
   .navbar2 {
@@ -829,5 +815,20 @@ img.contact:hover {
   img.companies {
     width: 200px;
     height: 100px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .projectsA {
+    grid-template-columns: repeat(2, 1fr);
+
+  }
+
+  .row {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  img.slide, img.slide-dark {
+    width: 70px;
   }
 }
